# URAF

./: CMakeLists.txt  README.md  bash.md  framedoc.md  package.xml
bash/: complete_test.sh  correct_final_fix.sh  final_fix_script.sh  fix_cmake_error.sh  fix_dependencies.sh  rokae_demo.sh  setup_elu_framework.sh
config/: vision_config.yaml
config/robots/: robot_config.yaml  rokae_cr7_config.yaml
config/safety/: safety_config.yaml
docs/: development_guide.md  update.md
include/elu_robot_arm_framework/adapters/: rokae_adapter.hpp
include/elu_robot_arm_framework/controllers/: motion_controller.hpp
include/elu_robot_arm_framework/interfaces/: robot_arm_interface.hpp
include/elu_robot_arm_framework/planners/: rokae_motion_planner.hpp  update20250804.md
include/elu_robot_arm_framework/safety/: safety_checker.hpp
include/elu_robot_arm_framework/utils/: plugin_manager.hpp
include/elu_robot_arm_framework/vision/: vision_communication.hpp
launch/: elu_robot_framework.launch.py  multi_arm_control.launch.py  rokae_integration_demo.launch.py  vision_integration_demo.launch.py
msg/: MotionCommand.msg  RobotStatus.msg  VisionResult.msg
plugins/elu_adapter/: elu_adapter_plugins.xml  rokae_adapter_plugins.xml
plugins/elu_adapter/include/elu_adapter/: elu_adapter.hpp
plugins/elu_adapter/src/: elu_adapter.cpp
src/adapters/: rokae_adapter.cpp
src/controllers/: motion_controller.cpp
src/motion_planners/: rokae_motion_planner..cpp
src/nodes/: motion_controller_node.cpp  rokae_integration_example.cpp  status_monitor_node.cpp  vision_communication_node.cpp  vision_integration_example.cpp
src/planners/: rokae_motion_planner.cpp
src/safety/: safety_checker.cpp
src/utils/: plugin_manager.cpp
src/vision/: vision_communication.cpp
srv/: ExecuteMotion.srv  SwitchRobot.srv  TriggerVision.srv
test/unit/: test_plugin_manager.cpp  test_safety_checker.cpp
