<?xml version="1.0"?>
<package format="3">
  <name>elu_robot_arm_framework</name>
  <version>0.5.0</version>
  <description>ELU Robot Arm Framework for ROS2</description>
  
  <maintainer email="info@elu-ai.com">ELU Robotics</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  
  <!-- Message dependencies -->
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- TF2 dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
  <!-- Plugin system -->
  <depend>pluginlib</depend>
  
  <!-- Message generation - 删除重复的 depend 标签 -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <!-- Optional motion planning -->
  <depend>control_msgs</depend>
  
  <!-- Build dependencies -->
  <build_depend>yaml-cpp</build_depend>
  
  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <!-- Export information -->
  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/plugins/elu_adapter/elu_adapter_plugins.xml"/>
    <pluginlib plugin="${prefix}/plugins/rokae_adapter/rokae_adapter_plugins.xml"/>
  </export>
</package>